colocando nombre de las peliculas en el home, al igual que armando el routing a detail row

--- a/11-peliculas-app/src/app/components/detail/detail.component.html
+++ b/11-peliculas-app/src/app/components/detail/detail.component.html
@@ -1,3 +1,35 @@
-<p>
-  detail works!
-</p>
+<h1>
+  {{ movie.original_title | uppercase }}
+</h1>
+
+<hr>
+
+<div class='row'>
+  <div class='col-md-4'>
+      <img [src]="'http://image.tmdb.org/t/p/w200/'+pet.poster_path" class="img-fluid" alt="">
+      <br> <br>
+      <a [routerLink]="['/home']" class="btn btn-outline-danger btn-block" href=""> Regresar </a>
+
+  </div>
+
+
+
+  <div class='col-md-8'>
+      <h3>
+          Sinopsis
+      </h3>
+      <hr>
+      <p>
+          {{ movie.overview }}
+      </p>
+
+      <h3>
+        Frase celebre
+      </h3>
+      <p>
+          {{ movie.overview }}
+      </p>
+
+  </div>
+
+</div>
