--- a/11-peliculas-app/src/app/components/search/search.component.html
+++ b/11-peliculas-app/src/app/components/search/search.component.html
@@ -1,3 +1,4 @@
-<p>
-  search works!
-</p>
+
+<div class="card-columns">
+    <app-movie-card  [movie]="movieIter"  *ngFor="let movieIter of movies"></app-movie-card>
+</div>
