--- a/11-peliculas-app/src/styles.css
+++ b/11-peliculas-app/src/styles.css
@@ -1,3 +1,12 @@
+.img-logo {
+    width: 200px;
+    height: 250px;
+}
+
+body {
+    padding-bottom: 50px;
+}
+
 div.media {
     width: 1000px;
     margin-top: 30px;
