search option from nav bar and component

--- a/11-peliculas-app/src/app/components/navbar/navbar.component.html
+++ b/11-peliculas-app/src/app/components/navbar/navbar.component.html
@@ -14,8 +14,9 @@
       </li>     
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+      <input class="form-control mr-sm-2"  #insertedText type="text" placeholder="Buscar" aria-label="Search" (keyup.enter)="searchMovie(insertedText.value)">
+
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="searchMovie(insertedText.value)">Buscar</button>
     </form>
   </div>
 </nav>
