--- a/11-peliculas-app/src/app/components/search/search.component.html
+++ b/11-peliculas-app/src/app/components/search/search.component.html
@@ -1,7 +1,7 @@
 
  <div>
   <form >
-    <input class="form-control mr-sm-2" #insertedText type="text" placeholder="Busca tu Pelicula" aria-label="Search" (keyup.enter)="searchMovie(insertedText.value)">
+    <input class="form-control mr-sm-2" #insertedText type="text" placeholder="Busca tu Pelicula" aria-label="Search" (keyup.enter)="searchMovie()">
   </form>
   <div class="card-columns">
       <app-movie-card  [movie]="movieIter"  *ngFor="let movieIter of movies"></app-movie-card>
