--- a/11-peliculas-app/src/app/components/home/home.component.html
+++ b/11-peliculas-app/src/app/components/home/home.component.html
@@ -5,6 +5,6 @@
     </div>
 </div>
 
-<app-row-home [inputMovieList]="inTheatres" [inputTitle]="'In Theatres'"></app-row-home>
-<app-row-home [inputMovieList]="popular" [inputTitle]="'Popular Movies'"></app-row-home>
-<app-row-home [inputMovieList]="popularKids" [inputTitle]="'Popular for Kids'"></app-row-home>
+<app-row-home [inputMovieList]="inTheatres | slice: 0:6 " [inputTitle]="'In Theatres'"></app-row-home>
+<app-row-home [inputMovieList]="popular | slice: 0:6" [inputTitle]="'Popular Movies'"></app-row-home>
+<app-row-home [inputMovieList]="popularKids | slice: 0:6" [inputTitle]="'Popular for Kids'"></app-row-home>
