--- a/11-peliculas-app/src/app/components/navbar/navbar.component.html
+++ b/11-peliculas-app/src/app/components/navbar/navbar.component.html
@@ -6,11 +6,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item active" routerLinkActive = "active" >
         <a class="nav-link" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['search']">Buscar</a>
+      <li class="nav-item" routerLinkActive = "active" >
+        <a class="nav-link" [routerLink]="['search', 'none']">Buscar</a>
       </li>     
     </ul>
     <form class="form-inline my-2 my-lg-0">
