--- a/13-youtube-app/src/app/components/home/home.component.html
+++ b/13-youtube-app/src/app/components/home/home.component.html
@@ -1,15 +1,36 @@
 <div class="container main-container">
-  <h1>Mi channel</h1>
-  <hr>
+    <h1>Mi channel</h1>
+    <hr>
 
-  <div class="card-columns" *ngIf="videos.length > 0">
-    <div class="card" *ngFor="let videoItem of videos">
-      <img class="card-img-top" [src]="videoItem.thumbnails.high.url" alt="videoItem.title">
-      <div class="card-body">
-        <h5 class="card-title">{{ videoItem.title }}</h5>
-        <button (click) = "verVide( videoItem )"  class="btn btn-outline-primary" >
-          Ver video
-        </button>
+    <div class="card-columns" *ngIf="videos.length > 0">
+        <div class="card" *ngFor="let videoItem of videos">
+            <img class="card-img-top" [src]="videoItem.thumbnails.high.url" alt="videoItem.title">
+            <div class="card-body">
+                <h5 class="card-title">{{ videoItem.title }}</h5>
+                <button (click)="verVideo( videoItem )" class="btn btn-outline-primary">
+                  Ver video
+                </button>
+            </div>
+        </div>
     </div>
+    <button (click)="cargarMas()" class="btn btn-outline-primary btn-block">
+      Load More
+    </button>
 
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backrop="static" data-keyboard="false">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" *ngIf="selectedVideo">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">{{ selectedVideo.title }}</h5>
+            </div>
+            <div class="modal-body">
+                <iframe width="560" height="315" [src]=" selectedVideo.resourceId.videoId | doomSeguro" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+            <div class="modal-footer">
+                <button (click)="cerrarModal()" type="button" class="btn btn-secondary">Close Modal</button>
+            </div>
+        </div>
+    </div>
 </div>
