--- a/16-graficos/src/app/app.component.html
+++ b/16-graficos/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="container">
-    <h1>Dynamic Graphs</h1>
+    <h1>Line chart</h1>
     <hr>
     <app-linea></app-linea>
+</div>
+
+<div class="container">
+    <h1>Bar chart</h1>
+    <hr>
+    <app-barra></app-barra>
 </div>
