donout and radar chart

--- a/16-graficos/src/app/app.component.html
+++ b/16-graficos/src/app/app.component.html
@@ -9,3 +9,16 @@
     <hr>
     <app-barra></app-barra>
 </div>
+
+
+<div class="container">
+    <h1>doughnut chart</h1>
+    <hr>
+    <app-dona-chart></app-dona-chart>
+</div>
+
+<div class="container">
+    <h1>doughnut chart</h1>
+    <hr>
+    <app-radar-chart></app-radar-chart>
+</div>
