--- a/16-graficos/src/app/components/barra/barra.component.html
+++ b/16-graficos/src/app/components/barra/barra.component.html
@@ -2,5 +2,8 @@
     <div style="display: block">
         <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
     </div>
-    <button (click)="randomize()">Update</button>
+    <div>
+        <button class="btn btn-primary btn-block" (click)="randomize()">Update</button>
+    </div>
+
 </div>
