--- a/15-fotosfirebase/src/app/components/carga/carga.component.html
+++ b/15-fotosfirebase/src/app/components/carga/carga.component.html
@@ -1,3 +1,36 @@
-<p>
-  carga works!
-</p>
+<div class="row">
+    <div class="col-md-4">
+        <h3>Select the files</h3>
+        <div class="well drop-zone">
+            <h4>Drang and drop here</h4>
+            <img src="assets/drop-images.png" alt="">
+        </div>
+    </div>
+    <div class="col-md-8">
+
+        <h4>Load Files</h4>
+        <button (click)="loadImages()" [disabled]="files.length === 0" class="btn btn-success">Upload to firebase</button>
+        <button (click)="clean()" class="btn btn-danger">Clean</button>
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Name</th>
+                    <th>Size</th>
+                    <th>Progress</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th>xyz</th>
+                    <th>123</th>
+                    <th>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 25%"></div>
+                        </div>
+                    </th>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
