--- a/15-fotosfirebase/src/app/components/carga/carga.component.html
+++ b/15-fotosfirebase/src/app/components/carga/carga.component.html
@@ -1,7 +1,10 @@
 <div class="row">
     <div class="col-md-4">
         <h3>Select the files</h3>
-        <div class="well drop-zone">
+        <!-- { 'file-over': isOverDrop } : quiere decir que cuando isOverDrop sea true se va a colocar el estilo file-over
+        mouseOver como es un evento va en parentesis y $event que se le pasa al testOverElem es el emitido por mouseOver, es 
+      esta caso un booleano -->
+        <div appNgDropFiles (mouseOver)="isOverDrop = $event" [ngClass]="{ 'file-over': isOverDrop }" class="well drop-zone">
             <h4>Drang and drop here</h4>
             <img src="assets/drop-images.png" alt="">
         </div>
