--- a/06-miscelaneous/src/app/components/navbar/navbar.component.html
+++ b/06-miscelaneous/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item"  routerLinkActive="active">
           <a class="nav-link" [routerLink]="['usuario', 10]" >Usuario</a>
         </li>
+        <li class="nav-item"  routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['google-captcha']" >google captcha</a>
+        </li>
         <li class="nav-item dropdown" routerLinkActive="active">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
